--- a/index.ipynb
+++ b/index.ipynb
@@ -85,51 +85,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'Area': 4758,\n",
-       "  'City': 'Buenos Aires',\n",
+       "[{'City': 'Buenos Aires',\n",
        "  'Country': 'Argentina',\n",
-       "  'Population': 2891000},\n",
-       " {'Area': 2731571,\n",
-       "  'City': 'Toronto',\n",
+       "  'Population': 2891000,\n",
+       "  'Area': 4758},\n",
+       " {'City': 'Toronto',\n",
        "  'Country': 'Canada',\n",
-       "  'Population': 2800000},\n",
-       " {'Area': 3194,\n",
-       "  'City': 'Pyeongchang',\n",
+       "  'Population': 2800000,\n",
+       "  'Area': 2731571},\n",
+       " {'City': 'Pyeongchang',\n",
        "  'Country': 'South Korea',\n",
-       "  'Population': 2581000},\n",
-       " {'Area': 200, 'City': 'Marakesh', 'Country': 'Morocco', 'Population': 928850},\n",
-       " {'Area': 491,\n",
-       "  'City': 'Albuquerque',\n",
+       "  'Population': 2581000,\n",
+       "  'Area': 3194},\n",
+       " {'City': 'Marakesh', 'Country': 'Morocco', 'Population': 928850, 'Area': 200},\n",
+       " {'City': 'Albuquerque',\n",
        "  'Country': 'New Mexico',\n",
-       "  'Population': 559277},\n",
-       " {'Area': 3750,\n",
-       "  'City': 'Los Cabos',\n",
+       "  'Population': 559277,\n",
+       "  'Area': 491},\n",
+       " {'City': 'Los Cabos',\n",
        "  'Country': 'Mexico',\n",
-       "  'Population': 287651},\n",
-       " {'Area': 68, 'City': 'Greenville', 'Country': 'USA', 'Population': 84554},\n",
-       " {'Area': 8300,\n",
-       "  'City': 'Archipelago Sea',\n",
+       "  'Population': 287651,\n",
+       "  'Area': 3750},\n",
+       " {'City': 'Greenville', 'Country': 'USA', 'Population': 84554, 'Area': 68},\n",
+       " {'City': 'Archipelago Sea',\n",
        "  'Country': 'Finland',\n",
-       "  'Population': 60000},\n",
-       " {'Area': 33,\n",
-       "  'City': 'Walla Walla Valley',\n",
+       "  'Population': 60000,\n",
+       "  'Area': 8300},\n",
+       " {'City': 'Walla Walla Valley',\n",
        "  'Country': 'USA',\n",
-       "  'Population': 32237},\n",
-       " {'Area': 27, 'City': 'Salina Island', 'Country': 'Italy', 'Population': 4000},\n",
-       " {'Area': 59, 'City': 'Solta', 'Country': 'Croatia', 'Population': 1700},\n",
-       " {'Area': 672,\n",
-       "  'City': 'Iguazu Falls',\n",
+       "  'Population': 32237,\n",
+       "  'Area': 33},\n",
+       " {'City': 'Salina Island', 'Country': 'Italy', 'Population': 4000, 'Area': 27},\n",
+       " {'City': 'Solta', 'Country': 'Croatia', 'Population': 1700, 'Area': 59},\n",
+       " {'City': 'Iguazu Falls',\n",
        "  'Country': 'Argentina',\n",
-       "  'Population': 0}]"
+       "  'Population': 0,\n",
+       "  'Area': 672}]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
