--- a/index.ipynb
+++ b/index.ipynb
@@ -289,7 +289,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "text_values = []\n",
+    "text_values = [x_]\n",
     "bar_trace_first_three_pops = {'type': 'bar', 'text': text_values}"
    ]
   },
