--- a/index.ipynb
+++ b/index.ipynb
@@ -285,17 +285,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "text_values = [x_]\n",
+    "text_values = [x_values]\n",
     "bar_trace_first_three_pops = {'type': 'bar', 'text': text_values}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
        "'bar'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -323,17 +323,23 @@
       "application/vnd.plotly.v1+json": {
        "data": [
         {
-         "text": [],
+         "text": [
+          [
+           "Buenos Aires",
+           "Toronto",
+           "Pyeongchang"
+          ]
+         ],
          "type": "bar"
         }
        ],
        "layout": {}
       },
       "text/html": [
-       "<div id=\"47835417-7107-4443-9aa6-01483ad46b15\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"47835417-7107-4443-9aa6-01483ad46b15\", [{\"type\": \"bar\", \"text\": []}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"08e0416a-3122-4a9e-9906-fc7cfa241566\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"08e0416a-3122-4a9e-9906-fc7cfa241566\", [{\"type\": \"bar\", \"text\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]]}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"47835417-7107-4443-9aa6-01483ad46b15\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"47835417-7107-4443-9aa6-01483ad46b15\", [{\"type\": \"bar\", \"text\": []}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"08e0416a-3122-4a9e-9906-fc7cfa241566\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"08e0416a-3122-4a9e-9906-fc7cfa241566\", [{\"type\": \"bar\", \"text\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]]}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
