--- a/index.ipynb
+++ b/index.ipynb
@@ -285,11 +285,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "text_values = [x_values]\n",
+    "text_values = [cities[0:2]]\n",
     "bar_trace_first_three_pops = {'type': 'bar', 'text': text_values}"
    ]
   },
