automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
        "'bar'"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -325,9 +325,18 @@
         {
          "text": [
           [
-           "Buenos Aires",
-           "Toronto",
-           "Pyeongchang"
+           {
+            "Area": 4758,
+            "City": "Buenos Aires",
+            "Country": "Argentina",
+            "Population": 2891000
+           },
+           {
+            "Area": 2731571,
+            "City": "Toronto",
+            "Country": "Canada",
+            "Population": 2800000
+           }
           ]
          ],
          "type": "bar"
@@ -336,10 +345,10 @@
        "layout": {}
       },
       "text/html": [
-       "<div id=\"02f74b38-d2fe-466f-9bb1-1ed3c47e5b88\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"02f74b38-d2fe-466f-9bb1-1ed3c47e5b88\", [{\"type\": \"bar\", \"text\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]]}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"a36c29a2-bd76-424d-8326-0b8707307a2e\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"a36c29a2-bd76-424d-8326-0b8707307a2e\", [{\"type\": \"bar\", \"text\": [[{\"City\": \"Buenos Aires\", \"Country\": \"Argentina\", \"Population\": 2891000, \"Area\": 4758}, {\"City\": \"Toronto\", \"Country\": \"Canada\", \"Population\": 2800000, \"Area\": 2731571}]]}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"02f74b38-d2fe-466f-9bb1-1ed3c47e5b88\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"02f74b38-d2fe-466f-9bb1-1ed3c47e5b88\", [{\"type\": \"bar\", \"text\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]]}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"a36c29a2-bd76-424d-8326-0b8707307a2e\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"a36c29a2-bd76-424d-8326-0b8707307a2e\", [{\"type\": \"bar\", \"text\": [[{\"City\": \"Buenos Aires\", \"Country\": \"Argentina\", \"Population\": 2891000, \"Area\": 4758}, {\"City\": \"Toronto\", \"Country\": \"Canada\", \"Population\": 2800000, \"Area\": 2731571}]]}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
