automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -285,17 +285,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "text_values = [cities[0:2]]\n",
+    "text_values = cities[0:2]\n",
     "bar_trace_first_three_pops = {'type': 'bar', 'text': text_values}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
        "'bar'"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -324,20 +324,18 @@
        "data": [
         {
          "text": [
-          [
-           {
-            "Area": 4758,
-            "City": "Buenos Aires",
-            "Country": "Argentina",
-            "Population": 2891000
-           },
-           {
-            "Area": 2731571,
-            "City": "Toronto",
-            "Country": "Canada",
-            "Population": 2800000
-           }
-          ]
+          {
+           "Area": 4758,
+           "City": "Buenos Aires",
+           "Country": "Argentina",
+           "Population": 2891000
+          },
+          {
+           "Area": 2731571,
+           "City": "Toronto",
+           "Country": "Canada",
+           "Population": 2800000
+          }
          ],
          "type": "bar"
         }
@@ -345,10 +343,10 @@
        "layout": {}
       },
       "text/html": [
-       "<div id=\"a36c29a2-bd76-424d-8326-0b8707307a2e\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"a36c29a2-bd76-424d-8326-0b8707307a2e\", [{\"type\": \"bar\", \"text\": [[{\"City\": \"Buenos Aires\", \"Country\": \"Argentina\", \"Population\": 2891000, \"Area\": 4758}, {\"City\": \"Toronto\", \"Country\": \"Canada\", \"Population\": 2800000, \"Area\": 2731571}]]}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"cccfa76a-ddd4-4e6f-a3b3-a2557550f712\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"cccfa76a-ddd4-4e6f-a3b3-a2557550f712\", [{\"type\": \"bar\", \"text\": [{\"City\": \"Buenos Aires\", \"Country\": \"Argentina\", \"Population\": 2891000, \"Area\": 4758}, {\"City\": \"Toronto\", \"Country\": \"Canada\", \"Population\": 2800000, \"Area\": 2731571}]}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"a36c29a2-bd76-424d-8326-0b8707307a2e\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"a36c29a2-bd76-424d-8326-0b8707307a2e\", [{\"type\": \"bar\", \"text\": [[{\"City\": \"Buenos Aires\", \"Country\": \"Argentina\", \"Population\": 2891000, \"Area\": 4758}, {\"City\": \"Toronto\", \"Country\": \"Canada\", \"Population\": 2800000, \"Area\": 2731571}]]}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"cccfa76a-ddd4-4e6f-a3b3-a2557550f712\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"cccfa76a-ddd4-4e6f-a3b3-a2557550f712\", [{\"type\": \"bar\", \"text\": [{\"City\": \"Buenos Aires\", \"Country\": \"Argentina\", \"Population\": 2891000, \"Area\": 4758}, {\"City\": \"Toronto\", \"Country\": \"Canada\", \"Population\": 2800000, \"Area\": 2731571}]}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
