--- a/index.ipynb
+++ b/index.ipynb
@@ -285,17 +285,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "text_values = text_values = [[cities[0]['City'], cities[1]['City'], cities[2]['City']]]\n",
+    "text_values = [[cities[0]['City'], cities[1]['City'], cities[2]['City']]]\n",
     "bar_trace_first_three_pops = {'type': 'bar', 'text': text_values}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
        "'bar'"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -324,18 +324,11 @@
        "data": [
         {
          "text": [
-          {
-           "Area": 4758,
-           "City": "Buenos Aires",
-           "Country": "Argentina",
-           "Population": 2891000
-          },
-          {
-           "Area": 2731571,
-           "City": "Toronto",
-           "Country": "Canada",
-           "Population": 2800000
-          }
+          [
+           "Buenos Aires",
+           "Toronto",
+           "Pyeongchang"
+          ]
          ],
          "type": "bar"
         }
@@ -343,10 +336,10 @@
        "layout": {}
       },
       "text/html": [
-       "<div id=\"cccfa76a-ddd4-4e6f-a3b3-a2557550f712\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"cccfa76a-ddd4-4e6f-a3b3-a2557550f712\", [{\"type\": \"bar\", \"text\": [{\"City\": \"Buenos Aires\", \"Country\": \"Argentina\", \"Population\": 2891000, \"Area\": 4758}, {\"City\": \"Toronto\", \"Country\": \"Canada\", \"Population\": 2800000, \"Area\": 2731571}]}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"71ff9daa-2b0a-42cb-8612-cd79e331a547\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"71ff9daa-2b0a-42cb-8612-cd79e331a547\", [{\"type\": \"bar\", \"text\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]]}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"cccfa76a-ddd4-4e6f-a3b3-a2557550f712\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"cccfa76a-ddd4-4e6f-a3b3-a2557550f712\", [{\"type\": \"bar\", \"text\": [{\"City\": \"Buenos Aires\", \"Country\": \"Argentina\", \"Population\": 2891000, \"Area\": 4758}, {\"City\": \"Toronto\", \"Country\": \"Canada\", \"Population\": 2800000, \"Area\": 2731571}]}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"71ff9daa-2b0a-42cb-8612-cd79e331a547\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"71ff9daa-2b0a-42cb-8612-cd79e331a547\", [{\"type\": \"bar\", \"text\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]]}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
